--- a/src/style/home.css
+++ b/src/style/home.css
@@ -5,7 +5,7 @@
 .main-section{
     display: flex;
     gap: 20px;
-    height: 76vh;
+    height: 400px;
     justify-content: space-between;
     align-items: center;
     padding: 40px 25px;
